Alterei a cifra, acabei de codar o encode e o decode, e fiz os testes. Alterei estrutura do HTML

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,23 @@
 <body>
   
   <header>
+
     <div id="root">
       <h1>POSITIVE WORDS!</h1>
-      <h2>Canal para você criptografar palavras positivas e animar o dia das suas amigas da SAP006!</h2>
+        <h2>Canal para você criptografar palavras positivas e animar o dia das suas amigas da SAP006!</h2>
     </div>
-  </header>
+ </header>
   
 <section>
 
   <div class="key">
-    <input type="text" id="chave" name="chave" value="Insira a chave da sua cifra">
+    <input type="text" id="chave" name="chave" placeholder="Insira a chave da sua cifra">
   </div>
 
   <div class="palavra">
-  <input type="text" id="palavra" name="palavra" value="Positive Word">
-  <button onClick="criptografar()">Criptografar</button>
-  <button onClick="descriptografar()">Descriptografar</button>
+    <input type="text" id="palavra" name="palavra" placeholder="Positive Word">
+       <button onclick="criptografar">Criptografar</button>
+       <button onclick="descriptografa">Descriptografar</button>
   </div>
 
 </section>
