Fiz ajustes dos botões no HTML e codei as interações da página

--- a/src/index.html
+++ b/src/index.html
@@ -18,19 +18,19 @@
 <section>
 
   <div class="key">
-    <input type="text" id="chave" name="chave" placeholder="Insira a chave da sua cifra">
+    <input type="number" id="chave" name="chave" placeholder="Insira a chave da sua cifra">
   </div>
 
   <div class="palavra">
     <input type="text" id="palavra" name="palavra" placeholder="Positive Word">
-       <button onclick="criptografar">Criptografar</button>
-       <button onclick="descriptografa">Descriptografar</button>
+       <button id ="criptografar" >Criptografar</button>
+       <button id ="descriptografar">Descriptografar</button>
   </div>
 
 </section>
 
 
-<footer>Atenção! Serão consideradas apenas letras maiúsculas, não admitindo uso de caracteres especiais! Divirtam-se</footer>
+<footer>Atenção! Serão consideradas apenas letras maiúsculas, não sendo admitido o uso de caracteres especiais ou "ç"! Divirtam-se!</footer>
 
 
 
