Alterei o nome de algumas variáveis para padronizar o idioma e melhorar a semântica

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
 <body>
   
   <header>
-
     <div id="root">
       <h1>POSITIVE WORDS!</h1>
         <h2>Canal para você criptografar palavras positivas e animar o dia das suas amigas da SAP006!</h2>
@@ -16,15 +15,14 @@
  </header>
   
 <section>
-
   <div class="key">
-    <input type="number" id="chave" name="chave" placeholder="Insira a chave da sua cifra">
+    <input type="number" id="keyInput" name="keyInput" placeholder="Insira a chave da sua cifra">
   </div>
 
-  <div class="palavra">
-    <input type="text" id="palavra" name="palavra" placeholder="Positive Word">
-       <button id ="criptografar" >Criptografar</button>
-       <button id ="descriptografar">Descriptografar</button>
+  <div class="message">
+    <input type="text" id="textInput" name="textInput" placeholder="Positive Word">
+       <button id ="encrypt">Criptografar</button>
+       <button id ="decrypt">Descriptografar</button>
   </div>
 
 </section>
