--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   
   <header>
     <div id="root">
-      <h1>POSITIVE WORDS!</h1>
+      <h1>MAGIC WORDS!</h1>
         <h2>Canal para você criptografar palavras positivas e animar o dia das suas amigas da SAP006!</h2>
     </div>
  </header>
@@ -21,11 +21,14 @@
 
   <div class="message">
     <input type="text" id="textInput" name="textInput" placeholder="Positive Word">
+    <p id="result">Sua palavra criptografada é </p>
+
        <button id ="encrypt">Criptografar</button>
        <button id ="decrypt">Descriptografar</button>
   </div>
 
 </section>
+
 
 
 <footer>Atenção! Serão consideradas apenas letras maiúsculas, não sendo admitido o uso de caracteres especiais ou "ç"! Divirtam-se!</footer>
