Adicionei um subtítulo explicativo do tema da página

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <header>
     <div id="root">
       <h1>MAGIC WORDS!</h1>
+      <h2>Transforme suas palavras favoritas <br />
+         em senhas seguras!</h2>
     </div>
   </header>
 
